<resources>
    <string name="app_name">Odd Jobs 2</string>
    <string name="profile_header">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="key_words">Key Words About Yourself</string>
    <string name="jobList_header">My Jobs</string>
    <string name="jobDescription_header">Job Description</string>
    <string name="job_name">Name of Job:</string>
    <string name="jobPoster_name">Job Posters Name:</string>
    <string name="job_description">Job Description:</string>
    <string name="amount_offered">Amount Offered:</string>
    <string name="contact_info">Contact Information:</string>
    <string name="skills_needed">Skills Needed:</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="work_request_button">I Need Help</string>
    <string name="work_search_button">I Need $$</string>
    <string name="title_word">Title:</string>
    <string name="cost_word">Cost:</string>
    <string name="job_word">Job</string>
    <string name="job_description_word">Job Description:</string>
    <string name="search_word">Search:</string>
    <string name="post_job_button">Post Job</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_job_list">Job Manager</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="no_jobs">You currently have no jobs posted. You can add some by navigating to the job poster page.</string>
    <string name="no_past_jobs">You do not have any past completed jobs.</string>
    <string name="submit_button">Submit</string>
    <string name="edit_button">Edit Profile</string>
    <string name="save_button">Save Profile</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title_activity_settings">Settings</string>
    <string name="job_title">Job Title</string>
    <string name="job_des">Job Description</string>
    <string name="job_pay">Job Pay</string>
    <string name="job_loc">Job Location</string>
    <string name="about_header">About</string>
    <string name="about_summary">About us.</string>
    <string name="general_header">General</string>
    <string name="dark_mode">Enable Dark Mode?</string>
    <string name="notification_header">Notifications</string>
    <string name="allow_notifications">Allow Notifications?</string>
    <string name="no_match">Not Matched</string>
    <string name="in_progress">In Progress</string>
    <string name="complete">Completed</string>
    <string name="poster">Poster</string>
    <string name="worker">Worker</string>
    <string name="skills_title">Skills:</string>
</resources>
