<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/about_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/about_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/general_header">

        <SwitchPreferenceCompat
            app:key="general"
            app:title="@string/dark_mode" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/allow_notifications" />

    </PreferenceCategory>

</PreferenceScreen>
