<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.widget.LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundColor"
        tools:context=".ProfileActivity">

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/cat_meme" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fnameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/first_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fnameView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Anthony"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/last_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lnameView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Ho"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/age"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ageView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="21"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/location"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/locView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Santa Cruz"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="ankho@ucsc.edu"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/phone_number"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="60dp"/>

            <TextView
                android:id="@+id/phoneNumView"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="555-555-5555"
                android:paddingBottom="60dp"
                android:textSize="20sp" />

        </LinearLayout>
    </android.widget.LinearLayout>
</ScrollView>